[package]
name = "alphafold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
zune-inflate = "0.2.0"
itertools = "0.10.5" 
arrayvec = "0.7.2"
osstrtools = "0.2.2"

